# BrowserAgentCLI

./: .gitignore  BrowserAgent_CLI_Functional_Plan.md  README.md  pyproject.toml
browseagent/: __init__.py  config.py  engine.py
browseagent/agent/: executor.py  memory.py  observer.py  planner.py
browseagent/browser/: actions.py  driver.py  extractor.py
browseagent/cli/: display.py  main.py
browseagent/llm/: client.py  prompts.py  schemas.py
browseagent/storage/: export.py  runs.py
browseagent/ui/: server.py
browseagent/ui/static/: app.js  index.html  style.css
